# rust_scf

./: .gitignore  Cargo.toml  README.md  SCF_TESTING_GUIDE.md  verify_h2_energy.py  verify_h2o_energy.py
basis/: Cargo.toml
basis/src/: basis.rs  cgto.rs  gto.rs  gto_test.rs  helper.rs  lib.rs
basis_library/: Cargo.toml  README.md  basis_selector.py  fetch_basis.py
basis_library/src/: lib.rs
md/: Cargo.toml  GCMC_GUIDE.md  GCMC_README.md  NPT_BAROSTAT_THERMOSTAT_SUMMARY.md  README_YAML_CONFIG.md
md/examples/: MULTI_ATOM_GUIDE.md  NPT_EXAMPLES_README.md  README.md  REORGANIZATION_SUMMARY.md  argon_melting_demo.rs  argon_npt.yaml  cluster_vs_metropolis.rs  critical_temperature_analysis.rs  gcmc_quickstart.rs  high_pressure_npt.yaml  ising_2d_mc.rs  multi_atom_npt.rs  parallel_mc_benchmark.rs  quick_lj_npt.rs  random_gas_nvt.yaml  simple_ising_3d.rs  simple_tc_calculation.rs  triclinic_lattice_demo.rs  water_cluster_nvt.yaml  wolff_algorithm_guide.rs
md/examples/molecular_dynamics/: README.md  argon_melting.rs  langevin_lj_cluster.rs  pressure_calculation_demo.rs
md/examples/monte_carlo/: README.md  parallel_mc_benchmark.rs
md/examples/monte_carlo/gcmc/: README.md  gcmc_lj_demo.rs  gcmc_phase_diagram.rs  gcmc_quickstart.rs
md/examples/monte_carlo/ising/: README.md  cluster_vs_metropolis.rs  critical_temperature_analysis.rs  ising_2d_mc.rs  ising_3d_mc.rs  ising_4d_mc.rs  simple_ising_3d.rs  simple_tc_calculation.rs  wolff_algorithm_guide.rs
md/examples/npt_ensemble/: LJ_CLUSTER_NPT_GUIDE.md  lj_cluster_npt.rs  multi_atom_npt.rs  quick_lj_npt.rs  single_atom_npt.rs  triclinic_lattice_demo.rs
md/examples/yaml_configs/: argon_npt.yaml
md/src/: config.rs  gcmc.rs  ising.rs  lib.rs  lj_pot.rs  main.rs  run_md.rs
md/src/ising/: analysis.rs  mod.rs  model2d.rs  model3d.rs  model4d.rs  tests.rs
rust_scf/: Cargo.toml
rust_scf/src/: lib.rs  main.rs
scf/: ARCHITECTURE.md  CCSD_GUIDE.md  CI_GUIDE.md  Cargo.toml  MP2_GUIDE.md  MULTIPLICITY_SUPPORT.md
scf/example/: ch3_radical.yaml  comparison_ci_mp2.yaml  h2_ccsd.yaml  h2_cis.yaml  h2_cisd.yaml  h2_mp2.yaml  h2_plus_doublet.yaml  h2o.yaml  h2o_ccsd.yaml  h2o_cis.yaml  h2o_mp2.yaml  h2o_optim.yaml  h2o_optimization_example.yaml  h2o_tight.yaml  h3o_cation.yaml  he2_ccsd.yaml  he2_cis.yaml  nh3_ccsd.yaml  o2_triplet.yaml
scf/examples/: README_H2O_OPTIMIZATION.md  benchmark_parallel.rs  force_demo.rs  force_validation_complete.rs  force_validation_demo.rs  geometry_optimization.rs  h2o_geometry_optimization.rs
scf/src/: config.rs  force_validation.rs  io.rs  lib.rs  main.rs  optim.rs  optim_impl.rs  python.rs  scf.rs  scf_impl.rs  simple.rs  simple_spin.rs  simple_test.rs
scf/src/app/: basis.rs  geometry.rs  mod.rs  report.rs  runner.rs  tasks.rs  workspace.rs
scf/src/ccsd_impl/: ccsd.rs  mod.rs  tests.rs
scf/src/ci_impl/: ci.rs  mod.rs  tests.rs
scf/src/config/: args.rs  mod.rs
scf/src/io/: basis_loader.rs  mod.rs  output.rs
scf/src/mp2_impl/: mod.rs  mp2.rs  tests.rs
scf/src/optim_impl/: cg.rs  mod.rs  steepest_descent.rs
scf/src/scf_impl/: dft.rs  mod.rs  simple.rs  simple_spin.rs  tests.rs
scf/tests/: integration_test.rs
scf/tests/basis_sets/: 6-31g.c.nwchem  6-31g.h.nwchem  6-31g.o.nwchem  sto-3g.h.nwchem  sto-3g.o.nwchem
scf/tools/: gen_b3lyp_libxc_ref.py  gen_tpss_libxc_ref.py
src/: gto.rs
src/basis/: basis.rs  gto.rs  gto_test.rs  helper.rs  mod.rs
src/basis_library/: fetch_basis.py
src/symbol/: kinetic_validate.py
