[package]
name = "rust_scf"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = { version = "0.33.0", features = ["rand", "serde-serialize"] }
libm = "0.2.11"
num-complex = "0.4.6"
rayon = "1.10.0"
itertools = "0.13.0"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.215", features = ["derive"] }

