[package]
name = "md"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = { version = "0.33.0", features = ["rand", "serde-serialize"] }
rand = "0.8.5"
rand_distr = "0.4"
itertools = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
approx = "0.5"
tempfile = "3.0"

[[example]]
name = "argon_melting"
path = "examples/argon_melting.rs"

[[example]]
name = "argon_melting_demo"
path = "examples/argon_melting_demo.rs"

[[example]]
name = "yaml_config_demo"
path = "examples/yaml_config_demo.rs"