[package]
name = "scf"
version = "0.1.0"
edition = "2021"

[lib]
name = "scf"
crate-type = ["rlib", "cdylib"]

[features]
default = []
python = ["dep:pyo3", "pyo3/extension-module", "pyo3/auto-initialize"]

[dependencies]
nalgebra = { version = "0.33.0", features = ["rand", "serde-serialize"] }
periodic-table-on-an-enum = "0.3.2"
rayon = "1.10"

basis = { path = "../basis" }
reqwest = "0.12.11"
serde = { version = "1.0.215", features = ["derive"] }
clap = { version = "4.5.28", features = ["derive"] }
serde_yml = { version = "0.0.12" }
color-eyre = "0.6.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
pyo3 = { version = "0.23.3", optional = true }
